@@ -18,6 +18,7 @@
 
 package org.apache.giraph;
 
+import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.util.List;
 
@@ -174,14 +175,19 @@ public class BspCase extends TestCase implements Watcher {
             // Since local jobs always use the same paths, remove them
             Path oldLocalJobPaths = new Path(
                 GiraphJob.ZOOKEEPER_MANAGER_DIR_DEFAULT);
-            FileStatus [] fileStatusArr = hdfs.listStatus(oldLocalJobPaths);
-            for (FileStatus fileStatus : fileStatusArr) {
-                if (fileStatus.isDir() &&
+            FileStatus[] fileStatusArr;
+            try {
+                fileStatusArr = hdfs.listStatus(oldLocalJobPaths);
+                for (FileStatus fileStatus : fileStatusArr) {
+                    if (fileStatus.isDir() &&
                         fileStatus.getPath().getName().contains("job_local")) {
-                    System.out.println("Cleaning up local job path " +
-                                       fileStatus.getPath().getName());
-                    hdfs.delete(oldLocalJobPaths, true);
+                        System.out.println("Cleaning up local job path " +
+                            fileStatus.getPath().getName());
+                        hdfs.delete(oldLocalJobPaths, true);
+                    }
                 }
+            } catch (FileNotFoundException e) {
+                // ignore this FileNotFound exception and continue.
             }
             if (zkList == null) {
                 return;
